# shellmate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: changelog.yml  release.yml
.opencode/skills/daily-changelog/: SKILL.md
docs/: DEVELOPMENT.md  GUIDE.md
docs/en/: DEVELOPMENT.md  GUIDE.md  SECURITY.md
docs/zh/: DEVELOPMENT.md  GUIDE.md  SECURITY.md
shell/: install.sh  remote-install.sh  shellmate.bash  shellmate.sh  shellmate.zsh
src/: cli.rs  command.rs  config.rs  context.rs  core.rs  error.rs  history.rs  lib.rs  main.rs  security.rs  shortcut.rs  ui.rs
src/llm/: anthropic.rs  gemini.rs  mod.rs  openai.rs  types.rs
tests/: command_test.rs  config_test.rs  context_test.rs  history_test.rs  integration_test.rs  security_test.rs  shortcut_test.rs
