[package]
name = "shellmate"
version = "0.1.8"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
dirs = "5"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
